--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -11,39 +11,33 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+import("//base/security/code_signature/code_signature.gni")
 import("//build/test.gni")
-import ("//base/security/code_signature/code_signature.gni")
 
 ohos_unittest("code_sign_utils_unittest") {
   module_out_path = "security/code_signature"
   resource_config_file = "resources/ohos_test.xml"
-  sources = [
-    "code_sign_utils_test.cpp"
-  ]
+  sources = [ "code_sign_utils_test.cpp" ]
 
   deps = [
     "${code_signature_root_dir}/interfaces/innerkits/code_sign_utils:libcode_sign_utils",
-    "//third_party/googletest:gtest"
+    "//third_party/googletest:gtest",
   ]
 
   include_dirs = [
     "${code_signature_root_dir}/interfaces/innerkits/code_sign_utils/include",
   ]
 
-  external_deps = [
-    "hiviewdfx_hilog_native:libhilog"
-  ]
+  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
 }
 
 ohos_unittest("local_code_sign_unittest") {
   module_out_path = "security/code_signature"
-  sources = [
-    "local_code_sign_test.cpp",
-  ]
+  sources = [ "local_code_sign_test.cpp" ]
   deps = [
     "${code_signature_root_dir}/interfaces/innerkits/local_code_sign:liblocal_code_sign_sdk",
-    "//third_party/openssl:libcrypto_shared",
     "//third_party/googletest:gtest",
+    "//third_party/openssl:libcrypto_shared",
   ]
 
   include_dirs = [
