--- a/BUILD.gn
+++ b/BUILD.gn
@@ -11,9 +11,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import("//base/security/code_signature//code_signature.gni")
 import("//build/ohos.gni")
 import("//build/ohos/sa_profile/sa_profile.gni")
+import("code_signature.gni")
 
 config("common_public_config") {
   include_dirs = [ "interfaces/innerkits/common/include" ]
