--- a/interfaces/innerkits/code_sign_utils/BUILD.gn
+++ b/interfaces/innerkits/code_sign_utils/BUILD.gn
@@ -11,8 +11,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import("//base/security/code_signature//code_signature.gni")
 import("//build/ohos.gni")
+import("../../../code_signature.gni")
 
 ohos_shared_library("libcode_sign_utils") {
   sources = [
