fix problems depending on external components using deps in BUILD.gn
Match-id-ce5c4492f3e07082ae60a205e14a27c3af840071

--- a/services/key_enable/BUILD.gn
+++ b/services/key_enable/BUILD.gn
@@ -23,9 +23,9 @@ ohos_rust_executable("key_enable") {
   ]
   deps = [
     "utils:libkey_enable_utils",
-    "//base/hiviewdfx/hilog/interfaces/rust:hilog_rust",
-    "//base/hiviewdfx/hisysevent/interfaces/rust/innerkits:hisysevent_rust"
+    "//base/hiviewdfx/hisysevent/interfaces/rust/innerkits:hisysevent_rust",
   ]
+  external_deps = [ "hiviewdfx_hilog_native:hilog_rust" ]
   crate_name = "key_enable"
   crate_type = "bin"
   subsystem_name = "security"
