--- a/code_signature.gni
+++ b/code_signature.gni
@@ -12,3 +12,6 @@
 # limitations under the License.
 
 code_signature_root_dir = "//base/security/code_signature"
+openssl_dir = "//third_party/openssl"
+fsverity_utils_dir = "//third_party/fsverity-utils"
+googletest_dir = "//third_party/googletest"
