--- a/services/local_code_sign/BUILD.gn
+++ b/services/local_code_sign/BUILD.gn
@@ -26,11 +26,16 @@ ohos_shared_library("liblocal_code_sign") {
   include_dirs = [
     "include",
     "${code_signature_root_dir}/interfaces/innerkits/local_code_sign/include",
+    "${code_signature_root_dir}/utils/include",
   ]
   shlib_type = "sa"
   public_configs = [ "${code_signature_root_dir}:common_public_config" ]
   configs = [ "${code_signature_root_dir}:common_utils_config" ]
-  deps = [ "//third_party/openssl:libcrypto_shared" ]
+  deps = [
+    "${code_signature_root_dir}/utils:fsverity_sign_src_set",
+    "${openssl_dir}:libcrypto_shared",
+    "${fsverity_utils_dir}:libfsverity_utils",
+  ]
   external_deps = [
     "access_token:libaccesstoken_sdk",
     "access_token:libtokenid_sdk",
@@ -49,7 +54,6 @@ ohos_shared_library("liblocal_code_sign") {
   subsystem_name = "security"
 
   install_images = [ "system" ]
-
   install_enable = true
 }
 
