--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -21,7 +21,7 @@ ohos_unittest("code_sign_utils_unittest") {
 
   deps = [
     "${code_signature_root_dir}/interfaces/innerkits/code_sign_utils:libcode_sign_utils",
-    "//third_party/googletest:gtest",
+    "${googletest_dir}:gtest",
   ]
 
   include_dirs = [
@@ -33,18 +33,21 @@ ohos_unittest("code_sign_utils_unittest") {
 
 ohos_unittest("local_code_sign_unittest") {
   module_out_path = "security/code_signature"
+  resource_config_file = "resources/ohos_test.xml"
   sources = [ "local_code_sign_test.cpp" ]
   deps = [
     "${code_signature_root_dir}/interfaces/innerkits/local_code_sign:liblocal_code_sign_sdk",
-    "//third_party/googletest:gtest",
-    "//third_party/openssl:libcrypto_shared",
+    "${code_signature_root_dir}/interfaces/innerkits/code_sign_utils:libcode_sign_utils",
+    "${googletest_dir}:gtest",
+    "${openssl_dir}:libcrypto_shared",
   ]
 
   include_dirs = [
     "${code_signature_root_dir}/interfaces/innerkits/local_code_sign/include",
     "${code_signature_root_dir}/services/local_code_sign/include",
+    "${code_signature_root_dir}/interfaces/innerkits/code_sign_utils/include",
   ]
-
+  configs = [ "${code_signature_root_dir}:common_utils_config" ]
   external_deps = [
     "access_token:libaccesstoken_sdk",
     "access_token:libnativetoken",
@@ -55,4 +58,14 @@ ohos_unittest("local_code_sign_unittest") {
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
   ]
+}
+
+group("unittest_group") {
+  testonly = true
+  if (!defined(ohos_lite)) {
+    deps = [
+      ":code_sign_utils_unittest",
+      ":local_code_sign_unittest",
+    ]
+  }
 }
