--- a/interfaces/innerkits/code_sign_utils/BUILD.gn
+++ b/interfaces/innerkits/code_sign_utils/BUILD.gn
@@ -33,9 +33,9 @@ ohos_shared_library("libcode_sign_utils") {
   external_deps = [
     "ability_base:extractortool",
     "c_utils:utils",
-    "hisysevent_native:libhisysevent",
-    "hitrace_native:hitrace_meter",
-    "hiviewdfx_hilog_native:libhilog",
+    "hisysevent:libhisysevent",
+    "hitrace:hitrace_meter",
+    "hilog:libhilog",
   ]
   install_enable = true
 
