--- a/services/local_code_sign/BUILD.gn
+++ b/services/local_code_sign/BUILD.gn
@@ -41,9 +41,9 @@ ohos_shared_library("liblocal_code_sign") {
     "access_token:libtokenid_sdk",
     "c_utils:utils",
     "eventhandler:libeventhandler",
-    "hisysevent_native:libhisysevent",
-    "hitrace_native:hitrace_meter",
-    "hiviewdfx_hilog_native:libhilog",
+    "hisysevent:libhisysevent",
+    "hitrace:hitrace_meter",
+    "hilog:libhilog",
     "huks:libhukssdk",
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
