--- a/test/fuzztest/local_code_sign_stub/signlocalcodestub_fuzzer/BUILD.gn
+++ b/test/fuzztest/local_code_sign_stub/signlocalcodestub_fuzzer/BUILD.gn
@@ -66,9 +66,9 @@ ohos_fuzztest("SignLocalCodeStubFuzzTest") {
     "access_token:libtokenid_sdk",
     "c_utils:utils",
     "eventhandler:libeventhandler",
-    "hisysevent_native:libhisysevent",
-    "hitrace_native:hitrace_meter",
-    "hiviewdfx_hilog_native:libhilog",
+    "hisysevent:libhisysevent",
+    "hitrace:hitrace_meter",
+    "hilog:libhilog",
     "huks:libhukssdk",
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
