--- a/utils/BUILD.gn
+++ b/utils/BUILD.gn
@@ -41,5 +41,5 @@ ohos_source_set("fsverity_sign_src_set") {
     "${openssl_dir}:libcrypto_shared",
   ]
 
-  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
+  external_deps = [ "hilog:libhilog" ]
 }
