--- a/utils/BUILD.gn
+++ b/utils/BUILD.gn
@@ -42,4 +42,6 @@ ohos_source_set("fsverity_sign_src_set") {
   ]
 
   external_deps = [ "hilog:libhilog" ]
+  part_name = "code_signature"
+  subsystem_name = "security"
 }
