--- a/services/key_enable/BUILD.gn
+++ b/services/key_enable/BUILD.gn
@@ -15,25 +15,35 @@ import("//build/ohos.gni")
 import("../../code_signature.gni")
 
 ohos_rust_executable("key_enable") {
-  sources = [
-    "src/cert_utils.rs",
-    "src/cs_hisysevent.rs",
-    "src/key_enable.rs",
-    "src/main.rs",
+  sources = [ "src/main.rs" ]
+  deps = [
+    "utils:libkey_enable_utils",
+    "${rust_openssl_dir}/openssl:lib"
   ]
-  deps = [ "utils:libkey_enable_utils" ]
   external_deps = [
     "hisysevent:hisysevent_rust",
     "hilog:hilog_rust",
   ]
+  if (build_variant == "root") {
+    rustenv = [ "code_signature_debuggable=on" ]
+  } else {
+    rustenv = [ "code_signature_debuggable=off" ]
+  }
   crate_name = "key_enable"
   crate_type = "bin"
   subsystem_name = "security"
   part_name = "code_signature"
 }
 
-ohos_prebuilt_etc("trusted_code_signature_ca") {
-  source = "config/trusted_code_signature_ca.cer"
+ohos_prebuilt_etc("trusted_code_signature_certs") {
+  source = "config/trusted_code_signature_certs.cer"
+  part_name = "code_signature"
+  subsystem_name = "security"
+  relative_install_dir = "security"
+}
+
+ohos_prebuilt_etc("trusted_code_signature_test_certs") {
+  source = "config/trusted_code_signature_test_certs.cer"
   part_name = "code_signature"
   subsystem_name = "security"
   relative_install_dir = "security"
@@ -50,6 +60,7 @@ group("key_enable_targets") {
   deps = [
     ":key_enable",
     ":key_enable.cfg",
-    ":trusted_code_signature_ca",
+    ":trusted_code_signature_certs",
+    ":trusted_code_signature_test_certs"
   ]
 }
