--- a/code_signature.gni
+++ b/code_signature.gni
@@ -11,6 +11,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+fuzz_module_output_path = "code_signature/code_signature"
 code_signature_root_dir = "//base/security/code_signature"
 fsverity_utils_dir = "//third_party/fsverity-utils"
 openssl_dir = "//third_party/openssl"
