--- a/test/fuzztest/local_code_sign_stub/signlocalcodestub_fuzzer/BUILD.gn
+++ b/test/fuzztest/local_code_sign_stub/signlocalcodestub_fuzzer/BUILD.gn
@@ -15,10 +15,8 @@ import("//build/config/features.gni")
 import("//build/test.gni")
 import("../../../../code_signature.gni")
 
-module_output_path = "code_signature/local_code_sign_stub"
-
 ohos_fuzztest("SignLocalCodeStubFuzzTest") {
-  module_out_path = module_output_path
+  module_out_path = "${fuzz_module_output_path}"
   fuzz_config_file = "."
 
   sources = [ "signlocalcodestub_fuzzer.cpp" ]
@@ -28,17 +26,15 @@ ohos_fuzztest("SignLocalCodeStubFuzzTest") {
     "-Wno-unused-variable",
     "-fno-omit-frame-pointer",
   ]
-  deps = [
-    "${code_signature_root_dir}/interfaces/innerkits/local_code_sign:liblocal_code_sign_sdk",
-  ]
+  deps = [ "${code_signature_root_dir}/interfaces/innerkits/local_code_sign:liblocal_code_sign_sdk" ]
 
   include_dirs = [
     "${code_signature_root_dir}/interfaces/innerkits/local_code_sign/include",
     "${code_signature_root_dir}/services/local_code_sign/include",
   ]
   external_deps = [
-    "access_token:libtoken_setproc",
     "access_token:libnativetoken",
+    "access_token:libtoken_setproc",
   ]
 
   sources += [
@@ -46,8 +42,8 @@ ohos_fuzztest("SignLocalCodeStubFuzzTest") {
     "${code_signature_root_dir}/services/local_code_sign/src/local_code_sign_stub.cpp",
     "${code_signature_root_dir}/services/local_code_sign/src/local_sign_key.cpp",
     "${code_signature_root_dir}/services/local_code_sign/src/permission_utils.cpp",
-    "${code_signature_root_dir}/utils/src/file_helper.cpp",
     "${code_signature_root_dir}/utils/src/cert_utils.cpp",
+    "${code_signature_root_dir}/utils/src/file_helper.cpp",
   ]
 
   include_dirs += [
@@ -58,17 +54,17 @@ ohos_fuzztest("SignLocalCodeStubFuzzTest") {
   configs = [ "${code_signature_root_dir}:common_utils_config" ]
   deps += [
     "${code_signature_root_dir}/utils:fsverity_sign_src_set",
-    "${openssl_dir}:libcrypto_shared",
     "${fsverity_utils_dir}:libfsverity_utils",
+    "${openssl_dir}:libcrypto_shared",
   ]
   external_deps += [
     "access_token:libaccesstoken_sdk",
     "access_token:libtokenid_sdk",
     "c_utils:utils",
     "eventhandler:libeventhandler",
+    "hilog:libhilog",
     "hisysevent:libhisysevent",
     "hitrace:hitrace_meter",
-    "hilog:libhilog",
     "huks:libhukssdk",
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
