--- a/interfaces/innerkits/code_sign_utils/BUILD.gn
+++ b/interfaces/innerkits/code_sign_utils/BUILD.gn
@@ -26,16 +26,21 @@ ohos_shared_library("libcode_sign_utils") {
   ]
   public_configs = [
     "${code_signature_root_dir}:common_public_config",
-    ":public_code_sign_utils_configs"
+    ":public_code_sign_utils_configs",
   ]
   configs = [ "${code_signature_root_dir}:common_utils_config" ]
+
+  deps = [
+    "${code_signature_root_dir}/utils:fsverity_sign_src_set",
+    "${openssl_dir}:libcrypto_shared",
+  ]
 
   external_deps = [
     "ability_base:extractortool",
     "c_utils:utils",
+    "hilog:libhilog",
     "hisysevent:libhisysevent",
     "hitrace:hitrace_meter",
-    "hilog:libhilog",
   ]
   install_enable = true
 
