--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -33,9 +33,11 @@ ohos_unittest("code_sign_utils_unittest") {
 
   include_dirs = [
     "${code_signature_root_dir}/interfaces/innerkits/code_sign_utils/include",
+    "${code_signature_root_dir}/utils/include",
   ]
 
   external_deps = [
+    "appverify:libhapverify",
     "c_utils:utils",
     "hilog:libhilog",
   ]
