--- a/services/key_enable/key_enable.cfg
+++ b/services/key_enable/key_enable.cfg
@@ -2,7 +2,10 @@
     "jobs" : [{
             "name" : "post-fs-data",
             "cmds" : [
-                "write /proc/sys/fs/verity/require_signatures 1"
+                "write /proc/sys/fs/verity/require_signatures 1",
+                "mkdir /data/service/el0/profiles 0644 installs installs",
+                "mkdir /data/service/el0/profiles/developer 0644 installs installs",
+                "mkdir /data/service/el0/profiles/debug 0644 installs installs"
             ]
         }
     ],
