--- a/services/key_enable/utils/BUILD.gn
+++ b/services/key_enable/utils/BUILD.gn
@@ -33,6 +33,7 @@ ohos_static_library("libkey_enable_utils") {
   external_deps = [
     "c_utils:utils",
     "hilog:libhilog",
+    "init:libbegetutil",
   ]
   subsystem_name = "security"
   part_name = "code_signature"
