--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -14,9 +14,27 @@
 import("//build/test.gni")
 import("../../code_signature.gni")
 
-ohos_unittest("code_sign_ioctl_unittest") {
+ohos_source_set("key_enable_src_set") {
+  sources = [
+    "${code_signature_root_dir}/services/key_enable/utils/src/cert_path.cpp",
+    "utils/src/enable_key_utils.cpp",
+  ]
+  include_dirs = [
+    "utils/include",
+    "${code_signature_root_dir}/services/key_enable/utils/include",
+  ]
+  configs = [
+    "${code_signature_root_dir}:common_utils_config",
+    "${code_signature_root_dir}:common_public_config",
+  ]
+  external_deps = [ "hilog:libhilog" ]
+  part_name = "code_signature"
+  subsystem_name = "security"
+}
+
+ohos_unittest("add_cert_path_unittest") {
   module_out_path = "security/code_signature"
-  sources = [ "code_sign_ioctl_test.cpp" ]
+  sources = [ "add_cert_path_test.cpp" ]
 
   deps = [ "${googletest_dir}:gtest" ]
 }
@@ -27,11 +45,13 @@ ohos_unittest("code_sign_utils_unittest") {
   sources = [ "code_sign_utils_test.cpp" ]
 
   deps = [
+    ":key_enable_src_set",
     "${code_signature_root_dir}/interfaces/innerkits/code_sign_utils:libcode_sign_utils",
     "${googletest_dir}:gtest",
   ]
 
   include_dirs = [
+    "utils/include",
     "${code_signature_root_dir}/interfaces/innerkits/code_sign_utils/include",
     "${code_signature_root_dir}/utils/include",
   ]
@@ -165,12 +185,33 @@ ohos_rust_unittest("rust_key_enable_unittest") {
   part_name = "code_signature"
 }
 
+ohos_unittest("enable_verity_ioctl_unittest") {
+  module_out_path = "security/code_signature"
+  resource_config_file = "resources/ohos_test.xml"
+  sources = [ "enable_verity_test.cpp" ]
+
+  include_dirs = [ "utils/include" ]
+  configs = [
+    "${code_signature_root_dir}:common_utils_config",
+    "${code_signature_root_dir}:common_public_config",
+  ]
+  deps = [
+    ":key_enable_src_set",
+    "${googletest_dir}:gtest",
+  ]
+  external_deps = [
+    "c_utils:utils",
+    "hilog:libhilog",
+  ]
+}
+
 group("unittest_group") {
   testonly = true
   if (!defined(ohos_lite)) {
     deps = [
-      ":code_sign_ioctl_unittest",
+      ":add_cert_path_unittest",
       ":code_sign_utils_unittest",
+      ":enable_verity_ioctl_unittest",
       ":local_code_sign_unittest",
       ":multi_thread_local_sign_unittest",
       ":rust_key_enable_unittest",
