interface for get support_oh_ca states
Signed-off-by: yeyuning <yeyuning2@huawei.com>
Change-Id: I5e3fea81904a4006f6c133c666f0348ae25f0871

--- a/code_signature.gni
+++ b/code_signature.gni
@@ -21,4 +21,5 @@ third_party_securec_dir = "//third_party/bounds_checking_function"
 
 declare_args() {
   code_signature_support_openharmony_ca = true
+  code_signature_support_oh_code_sign = false
 }
