local_code_sign 增加权限ohos.permission.ATTEST_KEY
Signed-off-by: yang1946 <yuzhaoyang1@huawei.com>

--- a/services/local_code_sign/local_code_sign.cfg
+++ b/services/local_code_sign/local_code_sign.cfg
@@ -10,6 +10,9 @@
             "name" : "local_code_sign",
             "path" : ["/system/bin/sa_main", "/system/profile/local_code_sign.json"],
             "secon": "u:r:local_code_sign:s0",
+            "permission": [
+                "ohos.permission.ATTEST_KEY"
+            ],
             "ondemand": true,
             "once": 1,
             "apl" : "system_basic",
