--- a/services/key_enable/BUILD.gn
+++ b/services/key_enable/BUILD.gn
@@ -71,7 +71,11 @@ ohos_prebuilt_etc("trusted_cert_path") {
 }
 
 ohos_prebuilt_etc("trusted_cert_path_test") {
-  source = "config/trusted_cert_path_test.json"
+  if (defined(sign_hap_py_path)) {
+    source = "config/trusted_cert_path_test.json"
+  } else {
+    source = "config/not_sign_hap_py_path/trusted_cert_path_test.json"
+  }
   part_name = "code_signature"
   subsystem_name = "security"
   relative_install_dir = "security"
