modify the start condition of key_enable to support pre-installed app with code signature
Signed-off-by: lihehe <lihehao@huawei.com>
Change-Id: I37b282649755eed0c929085026aa2965a7a7e79b
Signed-off-by: lihehe <lihehao@huawei.com>

--- a/services/key_enable/key_enable.cfg
+++ b/services/key_enable/key_enable.cfg
@@ -7,6 +7,11 @@
                 "mkdir /data/service/el0/profiles/developer 0655 installs installs",
                 "mkdir /data/service/el0/profiles/debug 0655 installs installs"
             ]
+        }, {
+            "name" : "init",
+            "cmds" : [
+                "start key_enable"
+            ]
         }
     ],
     "services" : [{
@@ -16,6 +21,7 @@
             "uid" : "root",
             "gid" : ["root"],
             "secon" : "u:r:key_enable:s0",
+            "start-mode": "condition",
             "once": 1
         }
     ]
