--- a/services/local_code_sign/BUILD.gn
+++ b/services/local_code_sign/BUILD.gn
@@ -33,18 +33,19 @@ ohos_shared_library("liblocal_code_sign") {
   configs = [ "${code_signature_root_dir}:common_utils_config" ]
   deps = [
     "${code_signature_root_dir}/utils:fsverity_sign_src_set",
-    "${openssl_dir}:libcrypto_shared",
     "${fsverity_utils_dir}:libfsverity_utils",
+    "${openssl_dir}:libcrypto_shared",
   ]
   external_deps = [
     "access_token:libaccesstoken_sdk",
     "access_token:libtokenid_sdk",
     "c_utils:utils",
     "eventhandler:libeventhandler",
+    "hilog:libhilog",
     "hisysevent:libhisysevent",
     "hitrace:hitrace_meter",
-    "hilog:libhilog",
     "huks:libhukssdk",
+    "init:libbegetutil",
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
