控制不同形态的xpm_mode
Signed-off-by: yeyuning <yeyuning2@huawei.com>
Change-Id: I0265af3b1cacb0f8df94ed5a8c7c379a7a3abc7e

--- a/services/key_enable/BUILD.gn
+++ b/services/key_enable/BUILD.gn
@@ -82,7 +82,11 @@ ohos_prebuilt_etc("trusted_cert_path_test") {
 }
 
 ohos_prebuilt_etc("key_enable.cfg") {
-  source = "key_enable.cfg"
+  if (code_signature_enable_xpm_mode) {
+    source = "cfg/key_enable.enable_xpm.cfg"
+  } else {
+    source = "cfg/key_enable.disable_xpm.cfg"
+  }
   relative_install_dir = "init"
   subsystem_name = "security"
   part_name = "code_signature"
