--- a/services/key_enable/cfg/key_enable.enable_xpm.cfg
+++ b/services/key_enable/cfg/key_enable.enable_xpm.cfg
@@ -12,6 +12,11 @@
             "cmds" : [
                 "start key_enable"
             ]
+        }, {
+            "name" : "pre-init",
+            "cmds" : [
+                "write /proc/sys/kernel/xpm/xpm_mode 1",
+            ]
         }
     ],
     "services" : [{
