--- a/interfaces/innerkits/code_sign_utils/BUILD.gn
+++ b/interfaces/innerkits/code_sign_utils/BUILD.gn
@@ -46,6 +46,9 @@ ohos_shared_library("libcode_sign_utils") {
   if (code_signature_support_oh_code_sign) {
     defines += [ "SUPPORT_OH_CODE_SIGN" ]
   }
+  if (build_variant == "root" || !code_signature_enable_xpm_mode) {
+    defines += [ "SUPPORT_PERMISSIVE_MODE" ]
+  }
   external_deps = [
     "ability_base:extractortool",
     "appverify:libhapverify",
