--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -200,6 +200,7 @@ ohos_unittest("enable_verity_ioctl_unittest") {
   deps = [
     ":key_enable_src_set",
     "${code_signature_root_dir}/interfaces/innerkits/code_sign_attr_utils:libcode_sign_attr_utils",
+    "${selinux_dir}:libselinux",
   ]
   external_deps = [
     "c_utils:utils",
