代码签名告警清理
Signed-off-by: yang1946 <yuzhaoyang1@huawei.com>

--- a/services/key_enable/cfg/key_enable.enable_xpm.cfg
+++ b/services/key_enable/cfg/key_enable.enable_xpm.cfg
@@ -15,7 +15,7 @@
         }, {
             "name" : "pre-init",
             "cmds" : [
-                "write /proc/sys/kernel/xpm/xpm_mode 1",
+                "write /proc/sys/kernel/xpm/xpm_mode 1"
             ]
         }
     ],
