--- a/utils/BUILD.gn
+++ b/utils/BUILD.gn
@@ -15,6 +15,12 @@ import("//build/ohos.gni")
 import("../code_signature.gni")
 
 ohos_source_set("fsverity_sign_src_set") {
+  sanitize = {
+    cfi = true
+    cfi_cross_dso = true
+    debug = false
+  }
+  branch_protector_ret = "pac_ret"
   sources = [
     "src/fsverity_utils_helper.cpp",
     "src/openssl_utils.cpp",
