--- a/interfaces/innerkits/code_sign_utils/BUILD.gn
+++ b/interfaces/innerkits/code_sign_utils/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2023 Huawei Device Co., Ltd.
+# Copyright (c) 2023-2024 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -40,10 +40,7 @@ ohos_shared_library("libcode_sign_utils") {
   ]
   configs = [ "${code_signature_root_dir}:common_utils_config" ]
 
-  deps = [
-    "${code_signature_root_dir}/utils:fsverity_sign_src_set",
-    "${openssl_dir}:libcrypto_shared",
-  ]
+  deps = [ "${code_signature_root_dir}/utils:fsverity_sign_src_set" ]
   if (host_os == "linux" && !is_asan) {
     deps += [ "${code_signature_root_dir}/services/key_enable:key_enable_lib" ]
   } else {
@@ -63,6 +60,7 @@ ohos_shared_library("libcode_sign_utils") {
     "hilog:libhilog",
     "hisysevent:libhisysevent",
     "hitrace:hitrace_meter",
+    "openssl:libcrypto_shared",
   ]
   install_enable = true
 
