--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2023 Huawei Device Co., Ltd.
+# Copyright (c) 2023-2024 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -76,7 +76,6 @@ ohos_unittest("local_code_sign_unittest") {
   deps = [
     "${code_signature_root_dir}/interfaces/innerkits/code_sign_utils:libcode_sign_utils",
     "${code_signature_root_dir}/interfaces/innerkits/local_code_sign:liblocal_code_sign_sdk",
-    "${openssl_dir}:libcrypto_shared",
   ]
 
   include_dirs = [
@@ -93,6 +92,7 @@ ohos_unittest("local_code_sign_unittest") {
     "c_utils:utils",
     "hilog:libhilog",
     "ipc:ipc_core",
+    "openssl:libcrypto_shared",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
   ]
@@ -105,7 +105,6 @@ ohos_unittest("sign_and_enforce_unittest") {
   deps = [
     "${code_signature_root_dir}/interfaces/innerkits/code_sign_utils:libcode_sign_utils",
     "${code_signature_root_dir}/interfaces/innerkits/local_code_sign:liblocal_code_sign_sdk",
-    "${openssl_dir}:libcrypto_shared",
   ]
 
   include_dirs = [
@@ -122,6 +121,7 @@ ohos_unittest("sign_and_enforce_unittest") {
     "c_utils:utils",
     "hilog:libhilog",
     "ipc:ipc_core",
+    "openssl:libcrypto_shared",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
   ]
@@ -134,7 +134,6 @@ ohos_unittest("multi_thread_local_sign_unittest") {
   deps = [
     "${code_signature_root_dir}/interfaces/innerkits/code_sign_utils:libcode_sign_utils",
     "${code_signature_root_dir}/interfaces/innerkits/local_code_sign:liblocal_code_sign_sdk",
-    "${openssl_dir}:libcrypto_shared",
   ]
 
   include_dirs = [
@@ -151,6 +150,7 @@ ohos_unittest("multi_thread_local_sign_unittest") {
     "c_utils:utils",
     "hilog:libhilog",
     "ipc:ipc_core",
+    "openssl:libcrypto_shared",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
   ]
