--- a/interfaces/innerkits/local_code_sign/BUILD.gn
+++ b/interfaces/innerkits/local_code_sign/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2023 Huawei Device Co., Ltd.
+# Copyright (c) 2023-2024 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -26,6 +26,9 @@ ohos_shared_library("liblocal_code_sign_sdk") {
   }
   branch_protector_ret = "pac_ret"
   sources = [
+    "${code_signature_root_dir}/utils/src/cert_utils.cpp",
+    "${code_signature_root_dir}/utils/src/huks_attest_verifier.cpp",
+    "${code_signature_root_dir}/utils/src/openssl_utils.cpp",
     "src/local_code_sign_client.cpp",
     "src/local_code_sign_kit.cpp",
     "src/local_code_sign_load_callback.cpp",
@@ -42,7 +45,9 @@ ohos_shared_library("liblocal_code_sign_sdk") {
     "c_utils:utils",
     "hilog:libhilog",
     "hisysevent:libhisysevent",
+    "huks:libhukssdk",
     "ipc:ipc_core",
+    "openssl:libcrypto_shared",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
   ]
