--- a/test/fuzztest/BUILD.gn
+++ b/test/fuzztest/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2023 Huawei Device Co., Ltd.
+# Copyright (c) 2023-2024 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -16,6 +16,9 @@ import("//build/ohos.gni")
 group("fuzztest_group") {
   testonly = true
   if (!defined(ohos_lite)) {
-    deps = [ "local_code_sign_stub/signlocalcodestub_fuzzer:SignLocalCodeStubFuzzTest" ]
+    deps = [
+      "local_code_sign_stub/initlocalcertificate_fuzzer:InitLocalCertificateStubFuzzTest",
+      "local_code_sign_stub/signlocalcodestub_fuzzer:SignLocalCodeStubFuzzTest",
+    ]
   }
 }
